# pyskeleton

./: .editorconfig  .flake8  .gitignore  Dockerfile  LICENCE  Makefile  README.md  SECURITY.md  compose.yaml  config.yaml  pyproject.toml
.github/: FUNDING.yml
app/: __main__.py  config.py  di.py  launcher.py  main.py  settings.py  typing.py
app/base/: controllers.py  entities.py  exceptions.py  repositories.py  services.py  validators.py  value_objects.py  vobjs.py
app/core/: controllers.py  entities.py  exceptions.py  repositories.py  requests.py  services.py  validators.py
app/domain/: constants.py  entities.py  services.py  value_objects.py
framework/cli/: __init__.py  main.py
framework/cli/commands/: create.py  delete.py
framework/templates/resources/: constants.py  controllers.py  dependecies.py  endpoints.py  exceptions.py  services.py  validators.py
framework/templates/resources/models/: entities.py  requests.py  responses.py
framework/templates/resources/repositories/: abstract.py  impl.py
framework/templates/resources/tests/req/: create.http  delete.http  health.http  put.http  read.http  read_all.http
framework/templates/resources/tests/units/: tests.py
