[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Arthur Brenno <arthurbreno009@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
fastapi = "^0.109.0"
pyyaml = "^6.0.1"
injector = "^0.21.0"
overrides = "^7.7.0"

[tool.poetry.scripts]
api = 'framework.cli:framework'

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
